--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chris | Neon Portfolio</title>
-    <link rel="icon" href="../images/icon.gif" type="image/gif">
+    <link rel="icon" href="icon.gif" type="image/gif">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
@@ -120,4 +120,5 @@
 </body>
 
 </html>
+
 
