Add footer with copyright notice
Added a footer section with copyright information.

--- a/index.html
+++ b/index.html
@@ -118,8 +118,10 @@
     </script>
 
 </body>
-
+<footer class="footer">
+    <p>&copy; 2025 Chris Portfolio. All rights reserved.</p>
 </html>
+
 
 
 
